--- a/index.css
+++ b/index.css
@@ -1,7 +1,5 @@
-# **PROGRAMMING FOR DESIGN**
-## ASIGNMENT #2: procedural thinking
-###### Grace Scott-Graham (u322383)
 
-background: #0d1117
+.element {background-color:#ffe4e4;}
+.element {border:1px solid #7dfee3;}
 
 
