--- a/index.css
+++ b/index.css
@@ -8,7 +8,27 @@ h1 {
 	padding:1px;
 	line-height: 1;
 
-	}}
+	}
+
+h2 {
+	text-align:center;
+	font-size:24px;
+	font-weight:normal;
+	margin:1px;
+	overflow:visible;
+	padding:1px;
+	line-height: 1;
+}
+	
+h3 {
+	text-align:center;
+	font-size:24px;
+	font-weight:normal;
+	margin:1px;
+	overflow:visible;
+	padding:1px;
+	line-height: 1;
+}
 
 main {
 	background-color:#ff8fc0;
