--- a/index.css
+++ b/index.css
@@ -5,7 +5,9 @@ main {
 		border-width: 1px;
 	border-color: #7dc0f7;
 	border-style: solid;
+}
 
+h1 {
 	text-align:center;
 	font-size:24px;
 	font-weight:normal;
@@ -14,6 +16,7 @@ main {
 	padding:1px;
 	line-height: 1;
 }
+
 
 
 
