--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ main {
 	border-style: solid;
 }
 
-h1 {
+head {
 	text-align:center;
 	font-size:24px;
 	font-weight:normal;
@@ -16,8 +16,16 @@ h1 {
 	padding:1px;
 	line-height: 1;
 }
-
-
+ 
+h1 {
+	
+ 	font-size:24px;
+	font-colour:rgb(102, 255, 194)
+	font-weight:normal;
+	margin:1px;
+	overflow:visible;
+	padding:1px;
+	line-height: 1;
 
 
 
