--- a/index.css
+++ b/index.css
@@ -7,8 +7,15 @@ main {
 	border-style: solid;
 }
 
-head {
+h1 {
+	background-color:#ff8fc0;
+	background: linear-gradient(90deg, rgb(249, 176, 247) 0%, rgb(255, 87, 207) 50%, rgba(255,174,188,1) 100%);
+		border-width: 1px;
+	border-color: #7dc0f7;
+	border-style: solid;
+	
 	text-align:center;
+	font-colour:rgb(102, 255, 194)
 	font-size:24px;
 	font-weight:normal;
 	margin:1px;
@@ -16,17 +23,8 @@ head {
 	padding:1px;
 	line-height: 1;
 }
- 
-h1 {
-	
- 	font-size:24px;
-	font-colour:rgb(102, 255, 194)
-	font-weight:normal;
-	margin:1px;
-	overflow:visible;
-	padding:1px;
-	line-height: 1;
 
+	
 
 
 
