--- a/index.css
+++ b/index.css
@@ -1,9 +1,11 @@
-		background-color:#ff8fc0;
+main{
+	background-color:#ff8fc0;
  		background: linear-gradient(90deg, rgb(249, 176, 247) 0%, rgb(255, 87, 207) 50%, rgba(255,174,188,1) 100%);
  	        border-width: 1px;
  		border-color: #7dc0f7;
  		border-style: solid;
 
+}
 head {
 	<link rel="stylesheet" href="index.css">
 	text-align:center;
@@ -13,7 +15,7 @@ head {
 	margin:1px;
 	overflow:visible;
 	padding:1px;
-	line-height: 1;
+	line-height: 4;
 }
 
 h1 {
@@ -25,7 +27,7 @@ h1 {
 	margin:1px;
 	overflow:visible;
 	padding:1px;
-	line-height: 1;
+	line-height: 4;
 }
 	
 ul{ 
@@ -36,7 +38,7 @@ ul{
 	margin:1px;
 	overflow:visible;
 	padding:1px;
-	line-height: 1;
+	line-height: 4;
 	
 	}
 h2{ 
@@ -48,7 +50,7 @@ h2{
 	margin:1px;
 	overflow:visible;
 	padding:1px;
-	line-height: 1;
+	line-height: 4;
 	
 	}
 h3{ 
@@ -60,7 +62,7 @@ h3{
 	margin:1px;
 	overflow:visible;
 	padding:1px;
-	line-height: 1;
+	line-height: 4;
 	
 	}
 
