--- a/index.css
+++ b/index.css
@@ -4,6 +4,14 @@ main {
  	border-width: 20px;
  	border-color:rgb(204, 153, 255);
  	border-style: solid;
+	
+body {
+	background-color:#ff8fc0;
+ 	background: linear-gradient(90deg, rgb(249, 176, 247) 0%, rgb(255, 87, 207) 50%, rgba(255,174,188,1) 100%);
+ 	border-width: 20px;
+ 	border-color:rgb(204, 153, 255);
+ 	border-style: solid;
+
 }
 
 head {
