--- a/index.css
+++ b/index.css
@@ -1,8 +1,9 @@
 main {
-	background-color:#ff8fc0;
- 	background: linear-gradient(90deg, rgb(249, 176, 247) 0%, rgb(255, 87, 207) 50%, rgba(255,174,188,1) 100%);
- 	font-colour:rgb(102, 255, 194)
-	font-size:24px;
+		background-color:#ff8fc0;
+ 		background: linear-gradient(90deg, rgb(249, 176, 247) 0%, rgb(255, 87, 207) 50%, rgba(255,174,188,1) 100%);
+ 	        border-width: 1px;
+ 		border-color: rgb(255, 255, 255);
+ 		border-style: solid;
 }
 	
 
